--- a/cudet/default_config.yaml
+++ b/cudet/default_config.yaml
@@ -1,7 +1,8 @@
 # Fuel client options
 fuelclient: True
-fuel_skip_proxy: True
 fuel_ip: '127.0.0.1'
+fuel_port: "8000"
+fuel_http_proxy: ''
 fuel_user: 'admin'
 fuel_pass: 'admin'
 fuel_tenant: 'admin'
