Changed filtering logic
- node filtering switched to new implementation (positive filtering)
- added appropriate exceptions to support filtering
- removed unused code

--- a/cudet-config.yaml
+++ b/cudet-config.yaml
@@ -5,8 +5,8 @@ rqdir: './rq'
 rqfile: './rq.yaml'
 cudet_db_dir: './db'
 outdir: '/tmp/cudet/info'
-hard_filter:
-    no_roles: ['fuel']
+filters:
+    check_master: False
     status: ['ready']
     online: True
     # you can filter by roles
